project set up for windows dev

--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,8 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-#
+# DS Store
 **/.DS_Store
+
+# VS Code
+.vsconfig
